# ChangeLog for net-libs/gnutls
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.254 2010/07/25 16:52:06 armin76 Exp $

  25 Jul 2010; Raúl Porcel <armin76@gentoo.org> gnutls-2.10.0.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #292025

*gnutls-2.10.1 (25 Jul 2010)

  25 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnutls-2.10.1.ebuild:
  Version bump.

*gnutls-2.11.0 (22 Jul 2010)

  22 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.8.5.ebuild, -gnutls-2.9.12.ebuild, +gnutls-2.11.0.ebuild:
  Version bump.

  11 Jul 2010; Tobias Klausmann <klausman@gentoo.org> gnutls-2.10.0.ebuild:
  Stable on alpha, bug #292025

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> gnutls-2.10.0.ebuild:
  ppc64 stable wrt #292025

  28 Jun 2010; Jeroen Roovers <jer@gentoo.org> gnutls-2.10.0.ebuild:
  Stable for HPPA (bug #292025).

  27 Jun 2010; Christian Faulhammer <fauli@gentoo.org> gnutls-2.10.0.ebuild:
  stable x86, security bug 292025

  26 Jun 2010; Christoph Mende <angelos@gentoo.org> gnutls-2.10.0.ebuild:
  Stable on amd64 wrt bug #292025

*gnutls-2.10.0 (25 Jun 2010)

  25 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.6.6.ebuild, -gnutls-2.9.11.ebuild, +gnutls-2.10.0.ebuild:
  Version bump (bug #292025).

  19 Jun 2010; Raúl Porcel <armin76@gentoo.org> gnutls-2.8.6.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #315781

*gnutls-2.9.12 (17 Jun 2010)

  17 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.9.10.ebuild, +gnutls-2.9.12.ebuild:
  Version bump.

*gnutls-2.9.11 (07 Jun 2010)

  07 Jun 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.9.9.ebuild, +gnutls-2.9.11.ebuild:
  Version bump.

  28 May 2010; Markus Meier <maekke@gentoo.org> gnutls-2.8.6.ebuild:
  arm/x86 stable, bug #315781
