@@ -1,7 +1,9 @@
 AUX gnutls-2.5.3-interix.patch 4842 RMD160 0ee1175eb90d16597f3ad095fcb363700c4848e4 SHA1 599f4bb3e8eb81e303ec2cf925592fb995cd923f SHA256 f3821351d964f084e4c58d1eb175a7e66800dd20c0d3ee49c8bd2040f4739846
 AUX gnutls-2.6.0-cxx-configure.in.patch 502 RMD160 fdd7f402f2a9122f8d7db9b165670c42d83abeb8 SHA1 748b7a0f0b689169054970993d7b4a6331f52c33 SHA256 c7a3ff932c467d08b27eee7e8b5bd1ce97b200328fc90478dee5ea3a59b18f71
 AUX gnutls-2.6.3-inttypes.patch 280 RMD160 720bffaff8aa81abead68715b4f9df50ffe97902 SHA1 cdadd1e3e7c96e8f2fc54993434f462cc794baf4 SHA256 6916d4d22feb41bfe1f456ccff685141f67b4c249dc43efc10335dbb06249a87
+DIST gnutls-2.10.0.tar.bz2 7443055 RMD160 df2bdc20b841205fa20c8893dc3cb11a35946e2e SHA1 16c94a1262f8ea3c4dd34eec495bd57203bbcd3a SHA256 8596643ce143bf6dd933594dd12da10024b4284cdd1fde758aeff65cbaf68c88
 DIST gnutls-2.11.0.tar.bz2 6692201 RMD160 a4fa542ae687aad27ca01466a2e70538e498dbbb SHA1 951d27dae2ab478d15e067ba1cda92b69c45ae31 SHA256 0298fb1b6ce30df46044d78cd719aa92b50c3537d83a82819aef4efb587997f5
+EBUILD gnutls-2.10.0.ebuild 2594 RMD160 9fb0ab7162cee91e57007f90281af56289fb3aaf SHA1 ac2a164d3e0125b83e38e148e60e0e7c537cd2fc SHA256 a739d3d31e664bb2efdc65a1460bc4c7f94926fccd4386e6f3c8c2390131e36d
 EBUILD gnutls-2.11.0.ebuild 2662 RMD160 487e8c48b7db73407aaa8772d15efc2f119f1690 SHA1 baa4de6537d91dcb7b498cbc1d56ba340240edea SHA256 2594dfaaa8bc9a5562e00dfc8997d51b3d6fa3af9811a983d5b9f4fd7929c5cc
-MISC ChangeLog 38065 RMD160 02681afac1bd4908d16ebcbb623ca1515f47c3de SHA1 229f71f47313b489a514d28f5cee62163a8994b3 SHA256 380c00b00bf5010c813be3c9b599c8cfd1ebeeb713e46cc7f1ed3c92659b59f3
+MISC ChangeLog 38163 RMD160 8ac948fcb95a19ebaf9dec1b93cf831c4f156176 SHA1 ae74dac99cd7ed32df20e3f0fe90bd1eb64a4408 SHA256 ef4ec1bca883063677d3f7c8118a5e3dee301384cc53f4fbb4eb9e5fbd2f98f9
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
